Several fixes & polish
 - Fixed wrong background texture.
 - Fixed inactive tabs rendering too far left, and tab icon alignment.
 - Fixed various vertical alignment issues due to line-height.
 - Fixed re-renders briefly showing the warnings dialog and making the screen flash.
 - Centred attunement input.
 - Fixed missing min width and height.
 - Fixed dark mode header texture rendering above header input elements in edit mode.
 - Adjusted spacing between sheet header and body.
 - Removed excess padding around sheet body.
 - Fixed missing active tab underline on items & activity sheets.
 - Fixed rendering of encumbrance bar & child creation button.
 - Fixed missing item-list-controls filters.

--- a/less/elements.less
+++ b/less/elements.less
@@ -213,6 +213,7 @@ dnd5e-icon.fa-fw {
       border-bottom: 1px solid var(--color-border-light-1);
       box-shadow: none;
       text-transform: unset;
+      width: 100%;
 
       &:hover, &:focus { box-shadow: none; }
 
